--- a/index.html
+++ b/index.html
@@ -137,8 +137,11 @@
                         <h5>Other Professions and Related Degrees</h5>
                         <p>
                             Any other degree related to computer science you will most likely learn to program.
-                            Other people from other degrees may also 
+                            Other people from other degrees may also become interested or may need to learn to program
+                            to make their jobs easier. Many degrees that see people going into programming are
+                            math degrees, business, and more. 
                         </p>
+                        <img src="public/resources/images/math.png" height="70%" width="70%" class="img-fluid"/>
 
                     </div>
                 </div>
