--- a/citations.html
+++ b/citations.html
@@ -51,7 +51,15 @@
                 </div>
             </div>
         </section>
-       
+        <footer>
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <a href="index.html">View Part One </a>
+                    <p>&nbsp;or&nbsp;</p>
+                    <a href="myDetails.html">View Part Two</a>
+                </div>
+            </div>        
+        </footer>
 
 
 
