--- a/citations.html
+++ b/citations.html
@@ -25,19 +25,38 @@
                     came from the sources listed below: 
                     </p>
                     <p class="text-center">Images: <br> 
+                        1: <a href="https://www.pngwing.com/en/search?q=computer+Screen">PNGWig "Computer Screen"</a> <br> <br>
+                        2: <a href="https://www.jing.fm/iclip/hTwhbR_png-file-svg-problem-solving-icon/">Jing.fm: "Problem Solving Icon"</a> <br> <br>
+                        3: <a href="https://www.pngfind.com/mpng/hwJhmTi_eight-rules-for-innovation-in-congregations-light-bulb/">PNG Find: "Light Bulb"</a> <br> <br>
+                        4: <a href="https://wp.wwu.edu/computerscience/conclusion/">WWU.edu "Programming Language Collage"</a>
+                        <br> <br>
                         5: <a href="https://www.cleanpng.com/png-logo-brand-blechschild-sometimes-you-win-sometimes-6387084/">Clean PNG: "Graphic Background" (Sololearn) </a>
                         <br> <br>
                         6: <a href="https://www.cleanpng.com/png-square-academic-cap-graduation-ceremony-hat-gradua-96188/">Clean PNG: "Background Graduation" </a>
                         <br> <br>
-                        7: <a href="https://money.usnews.com/careers/best-jobs/computer-programmer/salary">CNN USNEWS, Salary SVG: "Salary Graph"</a> <br>
+                        7: <a href="https://www.cleanpng.com/png-mathematics-multiplication-algebra-clip-art-cartoo-109535/download-png.html"> Clean PNG: "Table Background"</a> <br>
                         <br>
-                        8: <a href="https://www.cleanpng.com/png-software-bug-computer-programming-programmer-softw-352649/download-png.html">Clean PNG: "Software Bug Thumb"</a> <br>
+                        8: <a href="https://money.usnews.com/careers/best-jobs/computer-programmer/salary"> USNEWS, Salary SVG: "Salary Graph"</a> <br>
                         <br>
-                        9: <a href="https://www.cleanpng.com/png-business-customer-digital-marketing-men-at-work-354614/download-png.html">Clean PNG: "Digital Marketing Background"</a>
+                        9: <a href="https://www.cleanpng.com/png-software-bug-computer-programming-programmer-softw-352649/download-png.html">Clean PNG: "Software Bug Thumb"</a> <br>
+                        <br>
+                        10: <a href="https://www.cleanpng.com/png-business-customer-digital-marketing-men-at-work-354614/download-png.html">Clean PNG: "Digital Marketing Background"</a>
                         <br> <br>
-                        10: <a href="https://www.clipartmax.com/download/m2H7i8m2Z5N4Z5m2_coding-flat-icon-with-long-shadow-on-blue-circle-background-coding-flat/">Clip Art Max: "Coding Flat Icon With Long Shadow On Blue Circle Background "</a>
+                        11: <a href="https://www.clipartmax.com/download/m2H7i8m2Z5N4Z5m2_coding-flat-icon-with-long-shadow-on-blue-circle-background-coding-flat/">Clip Art Max: "Coding Flat Icon With Long Shadow On Blue Circle Background "</a>
                         <br> <br>
-                        12: <a href="https://www.cleanpng.com/png-alarm-clocks-watch-manecilla-time-machine-3040353/download-png.html">Clean PNG: "Clock Cartoon"</a>
+                        12: <a href="https://online.sju.edu/sites/default/files/graph_0.png">SJU: "Graph"</a>
+                        <br> <br>
+                        13 <a href="https://www.cleanpng.com/png-wi-fi-internet-access-hotspot-wireless-serviceicon-5964548/">Clean PNG "Wifi Logo"</a>
+                        <br> <br>
+                        14: <a href="https://pngtree.com/freepng/programmer-creative-mind-design_4860496.html">PNG Tree "Programmer Mind Design"</a>
+                        <br> <br>
+                        15: <a href="https://icons8.com/icon/46315/hard-working">PNG Tree: "Working"</a> <br> <br>
+                        16: <a href="https://www.cleanpng.com/png-alarm-clocks-watch-manecilla-time-machine-3040353/download-png.html">Clean PNG: "Clock Cartoon"</a>
+                        17: <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Rochester_Institute_of_Technology_seal.svg/1200px-Rochester_Institute_of_Technology_seal.svg.png">RIT Logo</a> <br> <br>
+                        18: <a href="https://www.wcsu.edu/upd/university-logo/">WCSU Logos</a> <br> <br>
+                        19: <a href="https://images.youracclaim.com/images/2a15d440-edbe-44a2-890f-0a0caf7e1442/AWS-Developer-Associate.png">AWS Certification Badge</a> <br> <br>
+                        20: <a href="https://sathishvj.medium.com/notes-from-my-google-cloud-professional-cloud-architect-exam-bbc4299ac30">Google Cloud Developer Certification</a> <br> <br>
+
                     </p>
                    
                 </div>
@@ -47,7 +66,19 @@
                     <p class="element text-center" style="text-decoration:none; font-size:2.5vw;">
                         All information came from the sources listed below:
                     </p>
-                 
+                </div>
+                <div class="row justify-content-center">
+                    <p class="text-center">Sources: <br>
+                        1: <a href="https://www.reddit.com/r/math/comments/36gkds/question_regarding_computer_programming_as_a/">Math in Computer Science</a> <br> <br>
+                        2:<a  href="https://makemeaprogrammer.com/what-education-is-needed-to-become-a-programmer/">Education for Programmers</a> <br> <br>
+                        3: <a href="https://medium.com/the-self-taught-programmer/the-ten-greatest-self-taught-programmers-of-all-time-b59b1b3bb9e6">Self Taught Programming</a> <br> <br>
+                        4:<a  href="https://www.owlguru.com/day-in-life-of-computer-programmers/">Daily Life of a Programmer</a> <br> <br>
+                        5:<a  href="https://www.wcsu.edu/admissions/freshmanapplicant/#:~:text=Students%20applying%20without%20SAT%2FACT,(Top%2035%25%20of%20class)">WCSU Application Requirements</a> <br> <br>
+                        6:<a  href="https://www.prepscholar.com/sat/s/colleges/RIT-admission-requirements#:~:text=With%20a%20GPA%20of%203.7,like%20AP%20or%20IB%20classes.">RIT Application Requirements</a> <br> <br>
+                        7:<a  href="https://www.bls.gov/ooh/computer-and-information-technology/computer-programmers.htm">Bureao of Labor Statistics - Computer Programmer</a> <br> <br>
+                        8:<a  href="https://www.factset.com/careers/who-we-are">Factset Who we Are</a>
+
+                    </p>
                 </div>
             </div>
         </section>
